# uyanzheng-rust

./: .gitignore  .iflowignore  AGENTS.md  CLAUDE.md  CLI_USAGE.md  CLOUD_FUNCTION.md  Cargo.toml  QWEN.md  README.md  SECURITY_AUDIT_FIRST_BATCH.md  agent.md  clear_port.sh  code_review.md  code_review_report.json  error.txt  new.sql  package-lock.json  package.json
.qwen/: settings.json
Nakamasa-Ai/: Cargo.toml
Nakamasa-Ai/src/: claude.rs  config.rs  error.rs  gemini.rs  lib.rs  llama_cpp.rs  lm_studio.rs  mistral_rust.rs  ollama.rs  openai.rs  provider.rs  sglang.rs  types.rs  vllm.rs
Nakamasa-Ai/src/skills/: mod.rs
Nakamasa-Ichika/: Cargo.toml  PAYMENT_AUDIT.md  SECURITY_AUDIT.md
Nakamasa-Ichika/locales/: en.json  zh-CN.json
Nakamasa-Ichika/src/: cli.rs  main.rs
Nakamasa-Ichika/src/app/: mod.rs  routes.rs
Nakamasa-Ichika/src/app/handlers/: health.rs  hello.rs  mod.rs  static_files.rs
Nakamasa-Ichika/src/app/handlers/api/: admin.rs  mod.rs
Nakamasa-Ichika/src/app/handlers/api/admin/: adm_list.rs  agent_cash.rs  agent_group.rs  agent_list.rs  app.rs  blocklist.rs  cdk_group.rs  cdk_kami.rs  cdk_user.rs  dict.rs  download.rs  encryption.rs  extend.rs  fen_event.rs  fen_order.rs  function.rs  goods.rs  login.rs  logs.rs  message.rs  notice.rs  order.rs  pay.rs  send.rs  set.rs  statistics.rs  system.rs  upload.rs  user.rs  ver.rs
Nakamasa-Ichika/src/app/handlers/api/admin/adm/: adm_list.rs  mod.rs
Nakamasa-Ichika/src/app/handlers/api/admin/agent/: agent_cash.rs  agent_group.rs  agent_list.rs  mod.rs
Nakamasa-Ichika/src/app/handlers/api/index/: authentication.rs  index.rs  install.rs  mod.rs  notify.rs  return_.rs
Nakamasa-Ichika/src/app/handlers/api/user/: ai.rs  ban.rs  bindUdid.rs  cloudFunction.rs  fen.rs  getCode.rs  getUdid.rs  goods.rs  heartbeat.rs  info.rs  ini.rs  kamiTopup.rs  logon.rs  logout.rs  messageAdd.rs  messageContent.rs  messageEnd.rs  messageList.rs  messageReply.rs  mod.rs  modifyName.rs  modifyPic.rs  modifyPwd.rs  order.rs  orderQuery.rs  pay.rs  qqBindSDK.rs  qqloginQuery.rs  qqloginSDK.rs  qqloginWeb.rs  reEmail.rs  rePhone.rs  reUdid.rs  reg.rs  resetPwd.rs  setAcctno.rs  setEmail.rs  setExtend.rs  setPhone.rs  signIn.rs  (+7 more)
Nakamasa-Ichika/src/app/handlers/mcp/: mod.rs  server.rs
Nakamasa-Ichika/src/app/middleware/: admin_auth.rs  app_context.rs  body_reader.rs  connect.rs  cors.rs  mod.rs  user_auth.rs
Nakamasa-Ichika/src/app/models/: admin.rs  admin_responses.rs  agent.rs  agent_cash.rs  agent_group.rs  app.rs  app_blocklist.rs  app_mi.rs  cdk_kami.rs  cdk_user.rs  enums.rs  goods.rs  logs.rs  message.rs  mod.rs  order.rs  requests.rs  responses.rs  vcode.rs
Nakamasa-Ichika/src/app/models/admin/: admin.rs  admin_requests.rs  admin_responses.rs  mod.rs
Nakamasa-Ichika/src/app/models/agent/: agent.rs  agent_cash.rs  agent_group.rs  mod.rs
Nakamasa-Ichika/src/app/models/app/: app.rs  app_blocklist.rs  app_extend.rs  app_function.rs  app_mi.rs  app_notice.rs  app_ver.rs  mod.rs
Nakamasa-Ichika/src/app/models/cdk/: cdk_kami.rs  cdk_user.rs  mod.rs
Nakamasa-Ichika/src/app/models/common/: common.rs  enums.rs  mod.rs
Nakamasa-Ichika/src/app/models/finance/: fen_event.rs  fen_order.rs  goods.rs  mod.rs  order.rs
Nakamasa-Ichika/src/app/models/logs/: logs.rs  mod.rs
Nakamasa-Ichika/src/app/models/message/: message.rs  mod.rs
Nakamasa-Ichika/src/app/models/user/: mod.rs  requests.rs  responses.rs  user.rs  vcode.rs
Nakamasa-Ichika/src/app/plugins/: mod.rs
Nakamasa-Ichika/src/app/plugins/encryption/: aes.rs  des.rs  mod.rs  rc4.rs  rsa.rs
Nakamasa-Ichika/src/app/plugins/mailer/: mod.rs  smtp.rs  trait_def.rs
Nakamasa-Ichika/src/app/plugins/pay/: ali.rs  http_client.rs  jie.rs  manager.rs  mod.rs  paypal.rs  qq.rs  trait_def.rs  wx.rs
Nakamasa-Ichika/src/app/plugins/sms/: ali.rs  http_client.rs  jie.rs  manager.rs  mod.rs  tencent.rs  trait_def.rs
Nakamasa-Ichika/src/app/utils/: mod.rs  response.rs  validator.rs
Nakamasa-Ichika/src/config/: app_config.rs  cors.rs  debug.rs  i18n.rs  mcp.rs  mod.rs  mysql.rs  redis.rs  security.rs  server.rs  zero_cost.rs
Nakamasa-Ichika/src/core/: admin_cache.rs  app_state.rs  arch.rs  cache.rs  db_optimize.rs  flamegraph.rs  handler_ext.rs  i18n.rs  json_optimize.rs  lru_cache.rs  macors.rs  md5_optimize.rs  migration.rs  mod.rs  mysql.rs  notify.rs  quickjs_runtime.rs  redis.rs  regex_cache.rs  server.rs  terminal_i18n.rs  tui_dashboard.rs  v8_runtime.rs  zero_copy.rs
Nakamasa-Ichika/src/core/middleware/: client_ip.rs  mod.rs
Nakamasa-Ichika/static/: index.html
Nakamasa-Ichika/static/assets/: index-4aPJaesF.js  index-btozXHjh.css  ui-BIDQNGMa.js  vendor-DI0dceEj.js
Nakamasa-Ichika/static/static/: Header-B4DvSod9.css  Header-rmsUmQpG.js  admin-RLYJwoHe.js  agent-D30OzK3U.js  authorization-CrzlYfoV.js  avatars-adm-BIHhTvqe.js  avatars-user-B1c4HATe.js  award-3OWPeNGO.js  blocklist-CEJG0zP3.js  code-CiO_VJGS.js  content-71S5h7iN.css  content-B7CrSOAY.js  edit-Bon7UoM-.js  encryption-C4N7udMV.js  encryption-CNQOSYi1.css  event-wBpIpjmv.js  extend-DM5Ve41g.js  function-DYHjEMS1.css  function-HRE6H-0P.js  group-BeKoKswm.js  group-D-xPRb4c.js  home-BYux0vqS.js  home-Cu6GdrSb.css  index-0XILjgRs.js  index-1Svt-U_A.js  index-BBZsLBy3.js  index-BDrB0h1o.js  index-BGKlrCVX.js  index-BIs2N2S3.js  index-BUmyzNfe.js  index-BW6YUCky.js  index-BZRyrXN5.js  index-Bl1g-7qw.js  index-Bv9qjoLZ.js  index-By4IcCrp.js  index-C-6n8gGy.css  index-C5zQ0BOt.js  index-C90b9iXl.js  index-CCHcsdMF.css  index-CDuwvIoe.js  (+82 more)
Nakamasa-proc/: Cargo.toml
Nakamasa-proc/src/: lib.rs
Nakamasa-utils/: Cargo.toml  HIGH_PERF_CACHE.md  HIGH_PERF_CACHE_V2.md
Nakamasa-utils/src/: crypto.rs  db_mysql.rs  geoip.rs  jwt.rs  lib.rs  tiered_cache.rs
Nakamasa-utils/src/distributed/: consistent_hash.rs  distributed_lock.rs  mod.rs  multi_level.rs  redis_backend.rs  sync_broadcast.rs
Nakamasa-utils/src/high_perf_cache/: arch_aarch64.rs  arch_x86_64.rs  atomic.rs  config.rs  hash.rs  manager.rs  mod.rs  policy.rs  pool.rs  pool_v2.rs  shard.rs  shard_v2.rs  stats.rs  stats_v2.rs  write_buffer.rs
(+299 files in other folders)
