[package]
name = "nakamasa-ai"
version = "0.1.0"
edition = "2021"

[features]
default = ["openai", "claude", "gemini", "vllm", "sglang", "ollama", "lm_studio", "llama_cpp", "mistral_rust"]
openai = []
claude = []
gemini = []
vllm = []
sglang = []
ollama = []
lm_studio = []
llama_cpp = []
mistral_rust = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
async-trait = { workspace = true }
thiserror = "2.0"
futures-util = "0.3"
chrono = { workspace = true }
